--- a/Utilities/DataExtraction.xaml
+++ b/Utilities/DataExtraction.xaml
@@ -426,6 +426,14 @@ Select row).CopyToDataTable]</InArgument>
                           <InArgument x:TypeArguments="x:String">[Today.Year.ToString("yyyy")]</InArgument>
                         </ui:FilterOperationArgument.Operand>
                       </ui:FilterOperationArgument>
+                      <ui:FilterOperationArgument BooleanOperator="Or" Operator="CONTAINS">
+                        <ui:FilterOperationArgument.Column>
+                          <InArgument x:TypeArguments="x:String">["שנת כספים"]</InArgument>
+                        </ui:FilterOperationArgument.Column>
+                        <ui:FilterOperationArgument.Operand>
+                          <InArgument x:TypeArguments="x:String">[Today.date.addYears(-1).Year.ToString("yyyy")]</InArgument>
+                        </ui:FilterOperationArgument.Operand>
+                      </ui:FilterOperationArgument>
                     </scg:List>
                   </ui:FilterDataTable.Filters>
                   <ui:FilterDataTable.SelectColumns>
